# python-dl-course-unifr

./: 01_Deep_Learning.ipynb  README.md  pyproject.toml
src/python_dl_course_unifr/: __init__.py  main.py
tests/: test_main.py
